--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <meta name="viewport" content="width=device-width, user-scalable=no" />
         <title>Codr</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script src='lib/quintus.js'></script>
-        <script src='lib/quintus_sprites.js'></script>
-        <script src='lib/quintus_scenes.js'></script>
-        <script src='lib/quintus_input.js'></script>
-        <script src='lib/quintus_anim.js'></script>
-        <script src='lib/quintus_2d.js'></script>
-        <script src='lib/quintus_touch.js'></script>
-        <script src='lib/quintus_ui.js'></script>
+        <script src='http://cdn.html5quintus.com/v0.1.5/quintus-all.js'></script>
         
 </head>
 <body>
